libs/modkit-macros/tests/ui/fail/caps_not_array.rs
use modkit_macros::module;

#[module(name="x", capabilities="rest")]
pub struct X;

fn main() {}
