libs/modkit-macros/tests/ui/fail/caps_not_array.stderr
error: capabilities must be an array, e.g. capabilities = [db, rest]
 --> tests/ui/fail/caps_not_array.rs:3:33
  |
3 | #[module(name="x", capabilities="rest")]
  |                                 ^^^^^^
